--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "just testing a bot",
   "dependencies": {
     "hubot": "^2.18.0",
+    "hubot-catapult": "0.0.1",
     "hubot-diagnostics": "0.0.1",
     "hubot-help": "^0.1.3",
     "hubot-heroku-keepalive": "^1.0.2",
